--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,8 @@
 .container {
   padding: 0 2rem;
   display: flex;
+  max-width: 600px;
+  margin: 0 auto;
   flex-direction: column;
   align-items: center;
 }
